[package]
name = "type-change"
authors = ["Kohei Fujino <appleblueberrycherry@gmail.com>"]
description = "Convert between different types of the same field name"
version = "0.1.0"
edition = "2018"
keywords = ["derive", "from"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]

[dependencies]
syn = "1.0.74"
quote = "1.0.9"
proc-macro2 = "1.0.28"

[lib]
proc-macro = true
path = "src/lib.rs"
